--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,55 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# ===== Spring Boot / Java / Maven =====
+target/
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+.mvn/
+mvnw
+mvnw.cmd
+*.class
+*.log
+logs/
+.idea/
+*.iml
+.classpath
+.project
+.settings/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# ===== React / Node / Tailwind / Frontend =====
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*
+build/
+dist/
+coverage/
+*.min.css  # nếu Tailwind build ra file minified lớn
+.DS_Store
+Thumbs.db
+
+# ===== Các file nhạy cảm chung (secret, config local) =====
+application.properties
+application.yml
+application-*.properties
+application-*.yml
+secrets/
+config/local/
+*.key
+*.pem
+*.secret
+*.token
+credentials.json
+keystore.jks
+truststore.jks
+
+# ===== Khác =====
+*.swp
+*.swo
+*.bak
+*.tmp
