--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -185,6 +185,14 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+
+        <!-- AWS S3 for cloud file storage (optional - receipt images) -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.25.0</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
     
     <build>
