--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -234,6 +234,11 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>9.22.0</version>
+            </plugin>
         </plugins>
     </build>
 </project>
