--- a/env.example
+++ b/env.example
@@ -3,6 +3,7 @@
 # ============================================
 # Copy file này thành .env và điền giá trị thực tế
 # KHÔNG commit file .env vào Git!
+# Production: Dùng Docker Secrets, AWS Secrets Manager hoặc Vault
 
 # ============================================
 # Database (MySQL)
@@ -15,9 +16,10 @@ DB_USER=root
 DB_PASS=your_secure_password_here
 
 # ============================================
-# JWT (BẮT BUỘC)
+# JWT (BẮT BUỘC - Production)
 # ============================================
-# Generate: openssl rand -base64 32
+# Generate: openssl rand -base64 48
+# Độ dài tối thiểu: 32 ký tự (256 bits)
 JWT_SECRET=your-super-secret-jwt-key-minimum-256-bits-long
 
 # ============================================
@@ -29,29 +31,34 @@ REDIS_HOST=qlcn-redis
 # Rate Limiting - IP Whitelist
 # ============================================
 # Bỏ qua rate limit cho: localhost, IP nội bộ, load balancer, monitoring
-# Ví dụ: 127.0.0.1,::1,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 RATE_LIMIT_WHITELIST_IPS=127.0.0.1,::1
 
 # ============================================
-# File Storage
+# File Storage - PRODUCTION: Dùng S3
 # ============================================
-# local | s3
-FILE_STORAGE_PROVIDER=local
+# local | s3 (Production nên dùng s3 để scale)
+FILE_STORAGE_PROVIDER=s3
 FILE_STORAGE_PATH=./uploads
 FILE_STORAGE_URL_PREFIX=/api/files
 
-# S3 (chỉ khi FILE_STORAGE_PROVIDER=s3)
-# AWS_ACCESS_KEY_ID=your-access-key
-# AWS_SECRET_ACCESS_KEY=your-secret-key
-# AWS_S3_BUCKET=your-bucket-name
-# AWS_REGION=ap-southeast-1
-# AWS_S3_ENDPOINT=  # Để trống cho AWS, hoặc URL cho MinIO
+# S3 (BẮT BUỘC khi FILE_STORAGE_PROVIDER=s3)
+AWS_ACCESS_KEY_ID=your-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-key
+AWS_S3_BUCKET=your-bucket-name
+AWS_REGION=ap-southeast-1
+# Để trống cho AWS, hoặc URL cho MinIO: http://minio:9000
+AWS_S3_ENDPOINT=
 
 # ============================================
-# Email (Gmail)
+# Email - PRODUCTION: Dùng AWS SES / SendGrid
 # ============================================
-# MAIL_USERNAME=your-email@gmail.com
-# MAIL_PASSWORD=your-gmail-app-password
+# KHÔNG dùng Gmail cá nhân cho production (giới hạn, spam)
+# AWS SES: email-smtp.ap-southeast-1.amazonaws.com
+# SendGrid: smtp.sendgrid.net (username=apikey)
+MAIL_HOST=smtp.sendgrid.net
+MAIL_PORT=587
+MAIL_USERNAME=apikey
+MAIL_PASSWORD=your-sendgrid-api-key
 
 # ============================================
 # OTP
@@ -59,15 +66,43 @@ FILE_STORAGE_URL_PREFIX=/api/files
 OTP_ENABLED=true
 
 # ============================================
-# CORS (Production)
+# CORS - PRODUCTION: Chỉ domain chính thức
 # ============================================
-# CORS_ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+# Dev: có thể thêm https://*.ngrok-free.app
+CORS_ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 
 # ============================================
-# Alertmanager (Telegram/Email)
+# Frontend URL (cho link trong email)
 # ============================================
-# TELEGRAM_BOT_TOKEN=your-bot-token
-# TELEGRAM_CHAT_ID=your-chat-id
-# SMTP_USER=
-# SMTP_PASSWORD=
+FRONTEND_URL=https://yourdomain.com
 
+# ============================================
+# Profile & Cookie (Production)
+# ============================================
+SPRING_PROFILES_ACTIVE=prod
+USE_HTTP_ONLY_COOKIE=true
+COOKIE_DOMAIN=.yourdomain.com
+COOKIE_SECURE=true
+COOKIE_SAME_SITE=strict
+
+# ============================================
+# Alertmanager (Telegram/Email cảnh báo)
+# ============================================
+# Bật cảnh báo khi server quá tải, lỗi 5xx
+TELEGRAM_BOT_TOKEN=your-bot-token
+TELEGRAM_CHAT_ID=your-chat-id
+SMTP_USER=alert@yourdomain.com
+SMTP_PASSWORD=your-smtp-password
+
+# ============================================
+# AI Prediction (Optional)
+# ============================================
+# Bật cache pre-warm để giảm tải khi data lớn
+# AI_PREDICTION_CACHE_WARM_ENABLED=true
+# AI_PREDICTION_CACHE_WARM_LIMIT=100
+
+# ============================================
+# JVM Tuning (cho Docker)
+# ============================================
+# Điều chỉnh theo RAM server: -Xmx nên = 50-70% RAM
+# JAVA_OPTS=-Xms256m -Xmx512m -XX:+UseG1GC -XX:MaxGCPauseMillis=200
