--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.50'
+          cpus: "0.50"
           memory: 512M
     volumes:
       - mysql_data:/var/lib/mysql
@@ -47,7 +47,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.20'
+          cpus: "0.20"
           memory: 256M
     volumes:
       - redis_data:/data
@@ -65,7 +65,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1.0'
+          cpus: "1.0"
           memory: 768M
     profiles: ["docker"]
     env_file:
@@ -94,7 +94,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.50'
+          cpus: "0.50"
           memory: 512M
     volumes:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
@@ -119,7 +119,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.20'
+          cpus: "0.20"
           memory: 128M
     volumes:
       - ./monitoring/alertmanager.yml:/etc/alertmanager/alertmanager.yml
@@ -138,7 +138,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.50'
+          cpus: "0.50"
           memory: 256M
     environment:
       - GF_SECURITY_ADMIN_USER=admin
@@ -164,7 +164,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.50'
+          cpus: "0.50"
           memory: 256M
     volumes:
       - ./monitoring/loki-config.yml:/etc/loki/local-config.yaml
@@ -181,7 +181,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.20'
+          cpus: "0.20"
           memory: 128M
     volumes:
       - ./monitoring/promtail-config.yml:/etc/promtail/config.yml
@@ -202,20 +202,3 @@ volumes:
 networks:
   app-network:
     driver: bridge
-#docker-compose up --build
-
-# # 1. Khi code, debug, chạy local
-# mvn spring-boot:run -Dspring-boot.run.profiles=localdocker
-# → Redis tự động localhost
-# docker-compose up --build để chạy doạn backend + mysql + redis trong docker
-# # 2. Khi deploy thật, cho khách truy cập, lên server
-# docker-compose up -d --build
-# → Redis tự động qlcn-redis (vì có profile "docker")
-#  3. Khi cần vào mysql trong docker
-# docker exec -it qlcn-mysql mysql -uroot -pLong@200
-#  4. Khi cần vào redis trong docker
-# docker exec -it qlcn-redis redis-cli
-#  5. Khi cần dừng docker
-# docker-compose down
-
-#mvn -DskipTests=true package
